--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,23 @@ version: '3.8'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    container_name: web
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - .:/code
+      - static_volume:/usr/src/app/static
     ports:
       - 8000:8000
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./config/nginx:/etc/nginx/conf.d
+      - static_volume:/usr/src/app/static
+    ports:
+      - 80:80
+    depends_on:
+      - web
+
+volumes:
+  static_volume:
