--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,5 +10,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install requirements
       run: pip install -r requirements.txt
+    - name: Run tests and collect coverage
+      run: pytest --cov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
